--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start:dev": "npx nodemon ./src/index.ts",
-    "start:prod": "webpack && node ./bundle/server.js",
+    "start:prod": "npm run build && node ./bundle/server.js",
+    "build": "webpack --mode production",
     "start:multi": "cross-env NODE_ENV=cluster webpack && node ./bundle/server.js",
     "test": "jest --silent"
   },
